crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__import_stdlib_string.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__import_stdlib_string

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/string/split as split(String, String) -> Vec[String]
import core/vec/nth as nth(Vec[z7], Int) -> Option[z7]
declare nth: (Vec[z7], Int) -> Option[z7]
declare println: (g) -> Unit
declare split: (String, String) -> Vec[String]

fn main() -> Unit =
  let v0: Vec[String] = call split("hello world", " ")
  let v1: Option[String] = call nth(v0, 0)
  switch v1 {
    0 (v2: String) ->
      let v3: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v4: Unit = call println(v3, v2)
      v4
    1 ->
      let v5: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v6: Unit = call println(v5, "error")
      v6
  }
