crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__intrinsic_conversions.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__intrinsic_conversions

extern java "krypton.runtime.KryptonConvert" toFloat(Int) -> Float
extern java "krypton.runtime.KryptonConvert" toInt(Float) -> Int
extern java "krypton.runtime.KryptonConvert" intToString(Int) -> String
extern java "krypton.runtime.KryptonString" concat(String, String) -> String
extern java "krypton.runtime.KryptonString" length(String) -> Int
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[p8]) -> List[p8]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare concat: (String, String) -> String
declare intToString: (Int) -> String
declare length: (String) -> Int
declare println: (g) -> Unit
declare toFloat: (Int) -> Float
declare toInt: (Float) -> Int

fn main() -> Unit =
  let v1: Float = call toFloat(1)
  let v2: Int = call toInt(v1)
  let v3: String = call intToString(v2)
  let v4: String = call concat(v3, "ab")
  let v5: Int = call length(v4)
  let v0: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v6: Unit = call println(v0, v5)
  v6
