crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__list_concat.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__list_concat

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], u1, (u1, s1) -> u1) -> u1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[x7]) -> List[x7]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/list/length as length(List[l]) -> Int
import core/list/concat as concat(List[a2], List[a2]) -> List[a2]
declare concat: (List[a2], List[a2]) -> List[a2]
declare length: (List[l]) -> Int
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: List[Int] = construct List::Nil#1()
  let v2: List[Int] = construct List::Cons#0(3, v1)
  let v3: List[Int] = construct List::Cons#0(2, v2)
  let v4: List[Int] = construct List::Cons#0(1, v3)
  let v5: List[Int] = construct List::Nil#1()
  let v6: List[Int] = construct List::Cons#0(6, v5)
  let v7: List[Int] = construct List::Cons#0(5, v6)
  let v8: List[Int] = construct List::Cons#0(4, v7)
  let v9: List[Int] = call concat(v4, v8)
  let v10: Int = call length(v9)
  let v0: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v11: Unit = call println(v0, v10)
  v11
