crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__list_filter.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__list_filter

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/list/length as length(List[z]) -> Int
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
declare filter: (List[h1], (h1) -> Bool) -> List[h1]
declare length: (List[z]) -> Int
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: List[Int] = construct List::Nil#1()
  let v2: List[Int] = construct List::Cons#0(3, v1)
  let v3: List[Int] = construct List::Cons#0(2, v2)
  let v4: List[Int] = construct List::Cons#0(1, v3)
  let v8: (Int) -> Bool = make_closure(lambda$27, [])
  let v9: List[Int] = call filter(v4, v8)
  let v10: Int = call length(v9)
  let v0: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v11: Unit = call println(v0, v10)
  v11

fn lambda$27(v5: Int) -> Bool =
  let v6: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
  let v7: Bool = trait_call core/ord.Ord.lt(v6, 1, v5)
  v7
