crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__list_fold.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__list_fold

import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: List[Int] = construct List::Nil#1()
  let v2: List[Int] = construct List::Cons#0(3, v1)
  let v3: List[Int] = construct List::Cons#0(2, v2)
  let v4: List[Int] = construct List::Cons#0(1, v3)
  let v8: (Int, Int) -> Int = make_closure(lambda$31, [])
  let v9: Dict[core/foldable.Foldable, List] = get_dict core/foldable.Foldable[List]
  let v10: Int = trait_call core/foldable.Foldable.fold(v9, v4, 0, v8)
  let v0: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v11: Unit = call println(v0, v10)
  v11

fn lambda$31(v5: Int, v6: Int) -> Int =
  let v7: Int = add_int(v5, v6)
  v7
